plugins {
    id 'application'
}

group 'com.kdsc.protogen.examples'
version 'unspecified'

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = [
                'src/main/examples/collections/java',
                'src/main/examples/empty/java',
                'src/main/examples/enums/java',
                'src/main/examples/interfaces/java',
                'src/main/examples/simple/java'
            ]
        }
    }
    test {
        java {
            srcDirs = [
                'src/test/java',
                'src/test/examples/collections/java',
                'src/test/examples/empty/java',
                'src/test/examples/enums/java',
                'src/test/examples/interfaces/java',
                'src/test/examples/simple/java'
            ]
        }
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    implementation project(':Compiler')
    implementation project(':Runtime')
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}